--- a/jim-porter-construction/config.toml
+++ b/jim-porter-construction/config.toml
@@ -11,6 +11,7 @@ theme = "hugo-scroll"
 # The "title" of your website
 title = "Jim Porter Construction"
 
+
 [params]
     # A "copyright"-line to be added at the bottom of the page.
     # Hint: Markdown is supported in here as well. So you may e.g. add a link to your legal imprint-page.
@@ -19,6 +20,9 @@ title = "Jim Porter Construction"
     # The "description" of your website. This is used in the meta data of your generated html.
     description = "Custom home building for the Central Country region."
 
+    # Google analytics tag
+    googleAnalytics = "G-BMMJ2FDCH2"
+    
     # The path to your "favicon". This should be a square (at least 32px x 32px) png-file.
     favicon = "images/favicon.png"
 
