central to center

--- a/jim-porter-construction/config.toml
+++ b/jim-porter-construction/config.toml
@@ -18,7 +18,7 @@ title = "Jim Porter Construction"
     copyright = "© Jim Porter"
 
     # The "description" of your website. This is used in the meta data of your generated html.
-    description = "Custom home building for the Central Country region."
+    description = "Custom home building for the Center Country region."
 
     # Google analytics tag
     googleAnalytics = "G-BMMJ2FDCH2"
